k8sconfig/dev-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sequelize_swagger
  lables:
    name: sequelize_swagger
