k8sconfig/nginx-dev-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx_pod
  labels:
    app: webserver
    tier: backend
spec:
  containers:
  - name: sequelize_swagger
    image: alfierichou/sequelize_swagger:0.0.1
    ports:
    - containerPort: 4000
  - name: nginx
    image: nginx:1.13
    ports:
    - containerPort: 80
    volumeMounts:
    - name: nginx-conf-volume
      mountPath: /etc/nginx/conf.d
  volumes:
  - name: nginx-conf-volume
    configMap:
      name: nginx-conf
      items:
      - key: ./nginx/sequelize-swagger.conf
        path: ./nginx/sequelize-swagger.conf
