k8sconfig/dev-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sequelize_swagger
spec:
  type: NodePort
  ports:
  - name: kjsp
    port: 4000
    protocol: TCP
    targetPort: 4000
  selector:
    app: sequelize_swagger
