k8sconfig/dev-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sequelize_swagger_ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: ss_namespace
spec:
  rules:
  - host: helloworld.alfierichou.com
    - http:
      paths:
      - backend:
        serviceName: sequelize_swagger
        servicePort: 4000
